href for requests in settings

--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -23,7 +23,7 @@
         <div class="control-block">
 
             <div title="Friend requests">
-                <a href="/friends/requsts" title="Friend requests" class="control-icon more has-items">
+                <a href="/friends/requests" title="Friend requests" class="control-icon more has-items">
                     <svg title="Friend requests" class="olymp-happy-face-icon">
                         <use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use>
                     </svg>
