--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -345,7 +345,7 @@
                             <a  href="34-YourAccount-ChatMessages.html" class="h6 title clickable">Chat / Messages</a>
                         </div>
                         <div class="ui-block-title">
-                            <a  href="35-YourAccount-FriendsRequests.html" class="h6 title clickable">Friend Requests</a>
+                            <a  href="/friends/requests" class="h6 title clickable">Friend Requests</a>
                             <a href="#" class="items-round-little bg-blue"
                                 {% if not num_requests %}
                                     style="display: none;"
