--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -18,7 +18,7 @@
                                 <ul class="profile-menu">
 
                                     <li>
-                                        <a href="06-ProfilePage.html">Friends</a>
+                                        <a href="/friends">Friends</a>
                                     </li>
                                 </ul>
                             </div>
