--- a/resources/views/layouts/app.twig
+++ b/resources/views/layouts/app.twig
@@ -82,6 +82,7 @@
 
 <script src="/js/base-init.js"></script>
 <script src="/js/main.js"></script>
+<script src="/js/chat.js"></script>
 
 <script src="/Bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
