add IsOnline beta

--- a/resources/views/chat.twig
+++ b/resources/views/chat.twig
@@ -20,13 +20,17 @@
 			<div class="ui-block">
 				<div class="ui-block-title">
 					<h6 class="title">Chat / Messages</h6>
-					<a href="#" class="more"><svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg></a>
+					<a href="#" class="more">
+						<svg class="olymp-three-dots-icon">
+							<use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
+						</svg>
+					</a>
 				</div>
 
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-r-0">	
 						<ul class="notification-list chat-message">
-							<li>
+							<li onclick()>
 								<div class="author-thumb">
 									<img src="img/avatar8-sm.jpg" alt="author">
 								</div>
