--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -358,7 +358,7 @@
                     </div>
                 </div>
                 <a href="/" class="author-name fn">
-                    <div class="author-title">
+                    <div  class="author-title" data-id="{{ user.id }}">
                         {{ user.login }}
                         <svg class="olymp-dropdown-arrow-icon">
                             <use xlink:href="/svg-icons/sprites/icons.svg#olymp-dropdown-arrow-icon"></use>
