--- a/resources/views/layouts/sidebarRight.twig
+++ b/resources/views/layouts/sidebarRight.twig
@@ -20,15 +20,7 @@
             </ul>
         </div>
 
-        <div class="search-friend inline-items">
-            <a href="#" class="js-sidebar-open">
-                <svg class="olymp-menu-icon">
-                    <use xlink:href="/svg-icons/sprites/icons.svg#olymp-menu-icon"></use>
-                </svg>
-            </a>
-        </div>
-
-        <a href="34-YourAccount-ChatMessages.html" class="olympus-chat inline-items">
+        <a href="/chat" class="olympus-chat inline-items">
             <svg class="olymp-chat---messages-icon">
                 <use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use>
             </svg>
