--- a/resources/views/chat.twig
+++ b/resources/views/chat.twig
@@ -22,7 +22,7 @@
 					<h6 class="title">Chat / Messages</h6>
 					<a href="#" class="more">
 						<svg class="olymp-three-dots-icon">
-							<use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
+							<use xlink:href="/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
 						</svg>
 					</a>
 				</div>
@@ -30,23 +30,27 @@
 				<div class="row">
 					<div class="col-xl-5 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-r-0">	
 						<ul class="notification-list chat-message">
-							<li onclick="get_chat(this)">
+							
+
+
+							{% for chat in chats %}
+							<li onclick="get_chat(this)" >
 								<div class="author-thumb">
-									<img src="img/avatar8-sm.jpg" alt="author">
+									<img src="/img/avatar8-sm.jpg" alt="author">
 								</div>
 								<div class="notification-event">
 									<a  class="h6 notification-friend">Diana Jameson</a>
-									<span class="chat-message-item">Hi James! It’s Diana, I just wanted to let you know that we have to reschedule...</span>
+									<span class="chat-message-item">{{ chat.last_mess[0]['messadge']}}</span>
 									<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">{{ user.lastAction }}</time></span>
 								</div>
-								<span class="notification-icon">
-									<svg class="olymp-chat---messages-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
-															</span>
-						
 								<div class="more">
-									<svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg>
+									<svg class="olymp-three-dots-icon"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg>
 								</div>
 							</li>
+							{% endfor %}
+
+
+
 						</ul>
 					</div>
 
@@ -55,13 +59,13 @@
 						<div class="chat-field">
 							<div class="ui-block-title">
 								<h6 class="title">Elaine Dreyfuss</h6>
-								<a href="#" class="more"><svg class="olymp-three-dots-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg></a>
+								<a href="#" class="more"><svg class="olymp-three-dots-icon"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use></svg></a>
 							</div>
 							<div class="mCustomScrollbar" data-mcs-theme="dark">
 								<ul class="notification-list chat-message chat-message-field">
 									<li>
 										<div class="author-thumb">
-											<img src="img/avatar10-sm.jpg" alt="author">
+											<img src="/img/avatar10-sm.jpg" alt="author">
 										</div>
 										<div class="notification-event">
 											<a href="#" class="h6 notification-friend">Elaine Dreyfuss</a>
@@ -77,156 +81,6 @@
 									<label class="control-label">Write your reply here...</label>
 									<textarea class="form-control" placeholder=""  ></textarea>
 								</div>
-						
-								<div class="add-options-message">
-									<a href="#" class="options-message">
-										<svg class="olymp-computer-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-computer-icon"></use></svg>
-									</a>
-									<a href="#" class="options-message">
-										<svg class="olymp-computer-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-computer-icon"></use></svg>
-									</a>
-									<div class="options-message smile-block">
-										<svg class="olymp-happy-sticker-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-happy-sticker-icon"></use></svg>
-						
-										<ul class="more-dropdown more-with-triangle triangle-bottom-right">
-											<li>
-												<a href="#">
-													<img src="img/icon-chat1.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat2.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat3.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat4.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat5.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat6.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat7.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat8.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat9.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat10.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat11.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat12.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat13.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat14.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat15.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat16.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat17.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat18.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat19.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat20.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat21.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat22.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat23.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat24.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat25.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat26.png" alt="icon">
-												</a>
-											</li>
-											<li>
-												<a href="#">
-													<img src="img/icon-chat27.png" alt="icon">
-												</a>
-											</li>
-										</ul>
-									</div>
-						
 									<button class="btn btn-primary btn-sm">Send</button>
 								</div>
 						
@@ -245,7 +99,7 @@
 </div>
 
 <a class="back-to-top" href="#">
-	<img src="svg-icons/back-to-top.svg" alt="arrow" class="back-icon">
+	<img src="/svg-icons/back-to-top.svg" alt="arrow" class="back-icon">
 </a>
 
 {% endblock %}
