--- a/resources/views/profile.twig
+++ b/resources/views/profile.twig
@@ -59,7 +59,7 @@
                                         <use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use>
                                     </svg>
                                 </a>
-                                <a title="Send message" href="#" class="btn btn-control bg-purple">
+                                <a title="Send message" href="#" data-id="{{ profile.id }}" class="btn btn-control bg-purple">
                                     <svg title="Send message" class="olymp-chat---messages-icon">
                                         <use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use>
                                     </svg>
