--- a/resources/views/layouts/app.twig
+++ b/resources/views/layouts/app.twig
@@ -47,6 +47,7 @@
 {% block content %}{% endblock %}
 
 <!-- JS Scripts -->
+<script src="/js/add_chat.js"></script>
 <script src="/js/jquery.appear.js"></script>
 <script src="/js/jquery.mousewheel.js"></script>
 <script src="/js/perfect-scrollbar.js"></script>
