--- a/resources/views/layouts/sidebarLeft.twig
+++ b/resources/views/layouts/sidebarLeft.twig
@@ -28,8 +28,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="17-FriendGroups.html">
-                        <svg class="olymp-happy-faces-icon left-menu-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="FRIEND GROUPS"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-faces-icon"></use></svg>
+                    <a href="/friends">
+                        <svg class="olymp-happy-faces-icon left-menu-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="Friends"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-faces-icon"></use></svg>
                     </a>
                 </li>
                 <li>
@@ -102,9 +102,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="17-FriendGroups.html">
+                    <a href="/friends">
                         <svg class="olymp-happy-faces-icon left-menu-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="FRIEND GROUPS"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-faces-icon"></use></svg>
-                        <span class="left-menu-title">Friend Groups</span>
+                        <span class="left-menu-title">Friends</span>
                     </a>
                 </li>
                 <li>
