--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -338,11 +338,11 @@
                         </div>
 
                         <div class="ui-block-title">
-                            <a  href="33-YourAccount-Notifications.html" class="h6 title clickable">Notifications</a>
-                            <a href="#" class="items-round-little bg-primary">8</a>
+                            <a  href="/notifications" class="h6 title clickable">Notifications</a>
+                            <a href="/notifications" class="items-round-little bg-primary">8</a>
                         </div>
                         <div class="ui-block-title">
-                            <a  href="34-YourAccount-ChatMessages.html" class="h6 title clickable">Chat / Messages</a>
+                            <a  href="/chat" class="h6 title clickable">Chat / Messages</a>
                         </div>
                         <div class="ui-block-title">
                             <a  href="/friends/requests" class="h6 title clickable">Friend Requests</a>
