--- a/resources/views/home.twig
+++ b/resources/views/home.twig
@@ -25,7 +25,7 @@
                             <div class="col-lg-5 ml-auto col-md-5">
                                 <ul class="profile-menu">
                                     <li>
-                                        <a href="07-ProfilePage-Photos.html">Photos</a>
+                                        <a href="/photo">Photos</a>
                                     </li>
 
 
@@ -50,7 +50,7 @@
                         </div>
                     </div>
                     <div class="top-header-author">
-                        <a href="02-ProfilePage.html" class="author-thumb">
+                        <a href="/" class="author-thumb">
                             <img src="/img{{ user.img }}" alt="author">
                         </a>
                         <div class="author-content">
