small changes for mobile views

--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -142,34 +142,34 @@
 	<div class="header-content-wrapper">
 		<ul class="nav nav-tabs mobile-app-tabs" role="tablist">
 			<li class="nav-item">
-				<a class="nav-link" data-toggle="tab" href="#request" role="tab">
+				<a class="nav-link"  href="/friends/requests" >
 					<div class="control-icon has-items">
 						<svg class="olymp-happy-face-icon">
 							<use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use>
 						</svg>
-						<div class="label-avatar bg-blue">6</div>
+						<div class="label-avatar bg-blue">{{ num_requests }}</div>
 					</div>
 				</a>
 			</li>
 
 			<li class="nav-item">
-				<a class="nav-link" data-toggle="tab" href="#chat" role="tab">
+				<a class="nav-link"  href="/chat" >
 					<div class="control-icon has-items">
 						<svg class="olymp-chat---messages-icon">
 							<use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use>
 						</svg>
-						<div class="label-avatar bg-purple">2</div>
+						<div class="label-avatar bg-purple">322</div>
 					</div>
 				</a>
 			</li>
 
 			<li class="nav-item">
-				<a class="nav-link" data-toggle="tab" href="#notification" role="tab">
+				<a class="nav-link"  href="/notifications" >
 					<div class="control-icon has-items">
 						<svg class="olymp-thunder-icon">
 							<use xlink:href="/svg-icons/sprites/icons.svg#olymp-thunder-icon"></use>
 						</svg>
-						<div class="label-avatar bg-primary">8</div>
+						<div class="label-avatar bg-primary">{{ num_notifications }}</div>
 					</div>
 				</a>
 			</li>
