--- a/resources/views/layouts/sidebarRight.twig
+++ b/resources/views/layouts/sidebarRight.twig
@@ -40,7 +40,7 @@
 
     <div class="fixed-sidebar-right sidebar--small" id="sidebar-right-responsive">
 
-        <a href="#" class="olympus-chat inline-items js-chat-open">
+        <a href="/chat" class="olympus-chat inline-items js-chat-open">
             <svg class="olymp-chat---messages-icon">
                 <use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use>
             </svg>
