--- a/resources/views/chat.twig
+++ b/resources/views/chat.twig
@@ -34,12 +34,18 @@
 
 
 							{% for chat in chats %}
-							<li onclick="get_chat(this)" >
+							<li onclick="chat_field({{ chat.id }})" >
 								<div class="author-thumb">
 									<img src="/img/avatar8-sm.jpg" alt="author">
 								</div>
 								<div class="notification-event">
-									<a  class="h6 notification-friend">Diana Jameson</a>
+									
+										{% for friend in friends %}
+											{% if (friend.from_request == chat.id_sob or friend.to_request == chat.id_sob) and (friend.status == 1) %}
+												<a  class="h6 notification-friend">{{ friend.profile.login }}</a>
+											{% endif %}
+										{% endfor %}
+									
 									<span class="chat-message-item">{{ chat.last_mess[0]['messadge']}}</span>
 									<span class="notification-date"><time class="entry-date updated" datetime="2004-07-24T18:18">{{ user.lastAction }}</time></span>
 								</div>
@@ -48,12 +54,8 @@
 								</div>
 							</li>
 							{% endfor %}
-
-
-
 						</ul>
 					</div>
-
 					<div class="col-xl-7 col-lg-6 col-md-12 col-sm-12 col-xs-12 padding-l-0">						
 						<!-- Chat Field -->
 						<div class="chat-field">
